--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
       </div>
       <img class="scroll-png" src="images/scroll.png" />
     </header>
+    <div class="hompage-partner-section">
+      <div class="partner-section-logo">
+        <img class="logo-img" src="images/partner-logo3.png">
+        <img class="logo-img" src="images/partners-logo5.png">
+        <img class="logo-img" src="images/partner-logo4.png">
+        <img class="logo-img" src="images/partner-logo1.png">
+        <img class="logo-img" src="images/partner-logo2.png">
+      </div>
+    </div>
     <div class="Homepage-best">
       <div class="best-services">
         <div class="Homepage-best-container">
