--- a/index.html
+++ b/index.html
@@ -140,13 +140,8 @@
     </div>
 <div class="homepage-liberty-banner">
 <div class="liberty-statue">
-<img class="liberty-img" src="images/liberty-statue-img.png" >
-</div>
-<div class="liberty-banner-text">
-  <h1>Let’s make your <br> next holiday amazing</h1>
-</div>
-<div class="line-liberty-decoration">
-  <img class="line-liberty" src="images/liberty-statue-Line.png" >
+  <h1 class="liberty-text">Let’s make your <br> next holiday amazing</h1>
+ <div class="line-liberty"><img src="images/liberty-statue-Line.png" ></div> 
 </div>
 </div>
     <div class="promotions-explore-container">
