--- a/index.html
+++ b/index.html
@@ -138,6 +138,36 @@
         </div>
       </div>
     </div>
+    <div class="homepage-favorite-resorts">
+      <div class="homepage-favorite-resorts-container">
+        <div class="favorite-resort"><div class="homepage-favorite-resorts-text">
+          <h5 class="orange-title">Fast & Easy</h5>
+          <h1 class="homepage-favorite-resorts-big-title">Get Your Favourite <br>Resort Bookings</h1>
+        </div>
+        <div class="container-text">
+            <div class="resort-container-text-img"> <div class="container-img">
+              <img src="images/value-image-1.png" >
+            </div>
+          <div class="homepage-favorite-resorts-text-1">
+            <h4 class="container-title">Choose Destination</h4>
+            <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
+              adipiscing elit. Urna, tortor tempus. </p>
+            </div></div>
+            <div class="resort-container-text-img"><div class="container-img"><img src="images/value-image-2.png" ></div>
+            <div class="homepage-favorite-resorts-text-1"><h4 class="container-title">Check Availability</h4>
+              <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
+                adipiscing elit. Urna, tortor tempus. </p></div></div>
+            <div class="resort-container-text-img"><div class="container-img"><img src="images/value-image-3.png" ></div>
+            <div class="homepage-favorite-resorts-text-1"><h4 class="container-title">Let’s Go</h4>
+              <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
+                adipiscing elit. Urna, tortor tempus. </p>
+              </div> 
+            </div>   
+        </div>
+      </div>
+      <div class="homepage-favorite-resorts-img"> <img src="images/book-trip-img.png" ></div>
+      </div>
+    </div>
 <div class="homepage-liberty-banner">
 <div class="liberty-statue">
   <h1 class="liberty-text">Let’s make your <br> next holiday amazing</h1>
