[PR-05]-stylecss-templated

--- a/index.html
+++ b/index.html
@@ -153,12 +153,21 @@
             <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
               adipiscing elit. Urna, tortor tempus. </p>
             </div></div>
-            <div class="resort-container-text-img"><div class="container-img"><img src="images/value-image-2.png" ></div>
-            <div class="homepage-favorite-resorts-text-1"><h4 class="container-title">Check Availability</h4>
+            <div class="resort-container-text-img">
+              <div class="container-img"><img src="images/value-image-2.png" >
+              </div>
+            <div class="homepage-favorite-resorts-text-1">
+              <h4 class="container-title">Check Availability</h4>
               <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
-                adipiscing elit. Urna, tortor tempus. </p></div></div>
-            <div class="resort-container-text-img"><div class="container-img"><img src="images/value-image-3.png" ></div>
-            <div class="homepage-favorite-resorts-text-1"><h4 class="container-title">Let’s Go</h4>
+                adipiscing elit. Urna, tortor tempus. </p>
+              </div>
+            </div>
+            <div class="resort-container-text-img">
+              <div class="container-img">
+                <img src="images/value-image-3.png" >
+              </div>
+            <div class="homepage-favorite-resorts-text-1">
+              <h4 class="container-title">Let’s Go</h4>
               <p class="container-paragraph">Lorem ipsum dolor sit amet, consectetur <br> 
                 adipiscing elit. Urna, tortor tempus. </p>
               </div> 
