[PR-06]-responsiv-tamamlandı

--- a/index.html
+++ b/index.html
@@ -140,8 +140,10 @@
     </div>
 <div class="homepage-liberty-banner">
 <div class="liberty-statue">
-  <h1 class="liberty-text">Let’s make your <br> next holiday amazing</h1>
- <div class="line-liberty"><img src="images/liberty-statue-Line.png" ></div> 
+  <div class="line-and-text">
+    <h1 class="liberty-text">Let’s make your <br> next holiday amazing</h1>
+ <div class="line-liberty"><img class="liberty-line" src="images/liberty-statue-Line.png" ></div> 
+  </div>
 </div>
 </div>
     <div class="promotions-explore-container">
