[PR-5]-responsiv-tamamlandı

--- a/index.html
+++ b/index.html
@@ -140,7 +140,8 @@
     </div>
     <div class="homepage-favorite-resorts">
       <div class="homepage-favorite-resorts-container">
-        <div class="favorite-resort"><div class="homepage-favorite-resorts-text">
+        <div class="favorite-resort">
+          <div class="homepage-favorite-resorts-text">
           <h5 class="orange-title">Fast & Easy</h5>
           <h1 class="homepage-favorite-resorts-big-title">Get Your Favourite <br>Resort Bookings</h1>
         </div>
